<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/background_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/home">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@color/light_dark"
            android:gravity="start|center_vertical"
            android:hint="@string/search"
            android:inputType="text"
            android:singleLine="true"
            android:fontFamily="@font/proxima_nova"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            android:drawableEnd="@drawable/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha="0.5"
                android:background="@drawable/gradient"
                android:scaleType="centerCrop"
                android:src="@drawable/titanfall_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesansbold"
                    android:text="@string/home_game_title"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova"
                    android:text="@string/home_game_description"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"/>

                <Button
                    android:id="@+id/forward_game_button"
                    android:layout_width="150dp"
                    android:layout_height="34dp"
                    android:fontFamily="@font/proxima_nova"
                    android:text="@string/show_details"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:background="@drawable/filled_button"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <ImageView
                android:layout_width="113dp"
                android:layout_height="140dp"
                android:layout_margin="12dp"
                android:src="@drawable/titanfall_game"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_game">

            <TextView
                android:id="@+id/best_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova"
                android:text="@string/best_selling"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/best_seller_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/best_seller"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>